--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -6,6 +6,7 @@ on:
       - main
   schedule:
     - cron: '0 * * * *'  # Executa a cada hora
+  workflow_dispatch: # Habilita execução manual
 
 jobs:
   build:
